<resources>
    <string name="app_name">HEMS</string>
    <string name="name">Name :</string>
    <string name="country">Country :</string>
    <string name="email">Email :</string>
    <string name="comment">Comment</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="smartphone">Smartphone</string>
    <string name="place">Place</string>
    <string name="toolbar1"></string>
    <string name="friend">Friend</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact us</string>
    <string name="plugname1">插座001</string>
    <string name="plugname2">插座002</string>
    <string name="plugname3">插座003</string>
    <string name="plugname4">插座004</string>
    <string name="lightname1">燈具001</string>
    <string name="lightname2">燈具002</string>
    <string name="lightname3">燈具003</string>
    <string name="lightname4">燈具004</string>
    <string name="button_schedule_txtsize1">8dp</string>
    <string name="button_schedule_txtsize2">8dp</string>
    <string name="button_schedule_txtsize3">8dp</string>
    <string name="button_schedule_txtsize4">8dp</string>
    <string name="tabhost1">控制電器</string>
    <string name="tabhost2">歷史用量</string>
    <string name="tabhost3">需量反應</string>

    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawerClose</string>

    <string-array name="Control">
        <item>職員辦公室1</item>
        <item>主任辦公室</item>
        <item>職員辦公室2</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pluginfo">Pluginfo</string>
    <string name="title_activity_lightinfo">Lightinfo</string>
    <string name="adapter_btnText">whatever</string>

    <string name="toolbarabout">說明</string>

</resources>
