<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/refresh_lightinfo">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    >



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/toolbarlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:descendantFocusability="blocksDescendants">

        <ImageView
            android:id="@+id/ItemImageL3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/adapter_btnText"
            app:srcCompat="@drawable/lightoff" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"

            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ItemNameL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:layout_weight="3"
                android:text="@string/lightname3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ItemInfoL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/ItemSwitchL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"                android:text="" />



                    <Button
                        android:id="@+id/ItemButtonL3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/adapter_btnText"
                        android:onClick="sendLightNumber3"
                        android:text="排程"
                        android:background="@drawable/round_plug"
                        android:textSize="18dp"/>

                    <!--> hide<-->
                    <Button
                        android:id="@+id/ItemButtonL7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:onClick="sendLightNumberChart3"
                        android:text="歷史"
                        android:visibility="invisible"
                        android:textSize="24dp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:descendantFocusability="blocksDescendants">

        <ImageView
            android:id="@+id/ItemImageL4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/adapter_btnText"
            app:srcCompat="@drawable/lightoff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"

            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ItemNameL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:text="@string/lightname4"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ItemInfoL4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/ItemSwitchL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:text="" />

                    <Button
                        android:id="@+id/ItemButtonL4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/adapter_btnText"
                        android:onClick="sendLightNumber4"
                        android:text="排程"
                        android:background="@drawable/round_plug"
                        android:textSize="18dp" />

                    <!--> hide<-->
                    <Button
                        android:id="@+id/ItemButtonL8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:onClick="sendLightNumberChart4"
                        android:text="歷史"
                        android:visibility="invisible"
                        android:textSize="24dp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>