<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/refresh_pluginfo">
<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    >




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbarplug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ItemImage1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/adapter_btnText"
            app:srcCompat="@drawable/icon_plugoff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"

            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ItemName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:text="@string/plugname1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ItemInfo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/ItemSwitch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:text="" />


                    <Button
                        android:id="@+id/ItemButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/adapter_btnText"
                        android:onClick="sendPlugNumber1"
                        android:text="排程"
                        android:background="@drawable/round_plug"
                        android:textSize="18dp" />

                    <!--> hide<-->
                    <Button
                        android:id="@+id/ItemButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:onClick="sendPlugNumberChart1"
                        android:text="歷史"
                        android:visibility="invisible"
                        android:textSize="24dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:descendantFocusability="blocksDescendants">

        <ImageView
            android:id="@+id/ItemImage2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/adapter_btnText"
            app:srcCompat="@drawable/icon_plugoff" />

        <LinearLayout

           android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ItemName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="5dp"
                android:text="@string/plugname2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ItemInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/ItemSwitch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:text="" />


                    <Button
                        android:id="@+id/ItemButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/adapter_btnText"
                        android:onClick="sendPlugNumber2"
                        android:text="排程"
                        android:background="@drawable/round_plug"
                        android:textSize="18dp" />

                    <!--> hide<-->
                    <Button
                        android:id="@+id/ItemButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:onClick="sendPlugNumberChart2"
                        android:text="歷史"
                        android:visibility="invisible"
                    android:textSize="24dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


</ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>